// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<Modal /> rendering should render nothing on incorrect param name 1`] = `
<div>
  <div
    class="modal is-visible content"
  >
    <div
      class="modal-container w-900 text-left"
    >
      <a
        class="modal-close-btn"
        href="/default/login"
      >
        ✖
      </a>
      <div
        class="message"
      />
    </div>
  </div>
</div>
`;

exports[`<Modal /> rendering should render nothing when request is bad 1`] = `
<div>
  <div
    class="modal is-visible content"
  >
    <div
      class="modal-container w-900 text-left"
    >
      <a
        class="modal-close-btn"
        href="/default/login"
      >
        ✖
      </a>
      <div
        class="message"
      />
    </div>
  </div>
</div>
`;

exports[`<Modal /> rendering should render privacy-policy correctly 1`] = `
<div>
  <div
    class="modal is-visible content"
  >
    <div
      class="modal-container w-900 text-left"
    >
      <a
        class="modal-close-btn"
        href="/default/login"
      >
        ✖
      </a>
      <div
        class="message"
      >
        privacy policy modal content
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> rendering should render terms-and-conditions correctly 1`] = `
<div>
  <div
    class="modal is-visible content"
  >
    <div
      class="modal-container w-900 text-left"
    >
      <a
        class="modal-close-btn"
        href="/default/login"
      >
        ✖
      </a>
      <div
        class="message"
      >
        t&c modal content
      </div>
    </div>
  </div>
</div>
`;
